# sydney-property-ai-Arthur

./: ._geo_analyzer.py  ._项目说明文档.txt  .dockerignore  .env.example  .eslintrc.js  .gitignore  API_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DATA_STRUCTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Data_process.py  Dockerfile  GETTING_STARTED.md  README.md  README_NEW.md  REAL_DATA_SAMPLE.json  RUN_GUIDE.md  SAMPLE_DATA.json  app.py  app_live.py  app_refactored.py  data_sample_output.json  dev-start.bat  dev-start.sh  docker-compose.yml  fix_issues.py  geo_analyzer.py  jest.config.js  package.json  pyproject.toml  recommend_claude.py  requirements.txt  requirements_new.txt  setup.sh  start.py  start.sh  start_backend.py  status_check.py  (+10 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
ai/processors/: intent_processor.py
app/: main.py
app/api/api_v1/: api.py
app/core/: config.py  logging.py
app/database/: base.py
app/models/: property.py  search_history.py
app/services/: llm_parser.py  openai_parser.py  recommendation_service.py
backend/models/: property.py
backend/services/: concurrent_property_fetcher.py  data_service.py  intent_to_url_translator.py  live_property_url_builder.py  live_recommendation_engine.py  property_deduplicator.py  recommendation_service.py  site_parsers.py
backend/utils/: logger.py
config/: settings.py
crawler/realestate_crawler/: README.md  comprehensive_sydney_crawler.py  config.py  domain_spider.py  generate_large_dataset.py  realestate_spider.py  requirements.txt  run_all.py  save_utils.py  scheduler.py  test_crawler.py
crawler/realestate_crawler/data/: large_combined_20250715_094631.csv  large_domain_com_au_20250715_094631.csv  large_realestate_com_au_20250715_094631.csv  large_realestateview_com_au_20250715_094631.csv  large_rent_com_au_20250715_094631.csv  large_summary_20250715_094631.txt  sydney_full_dataset_20250715_095106.csv  sydney_full_report_20250715_095106.txt  test_combined_20250715_094018.csv  test_domain_20250715_094018.csv  test_realestate_20250715_094017.csv  (+1 more)
data/: sydney_suburb_postcode_mapping.py
docs/: API.md
frontend/: direct_scraper.html  index.html  test.html
frontend/components/: analysis_panel.py  footer.py  header.py  input_area.py  recommendations.py  sidebar.py
frontend/styles/: theme.py
scripts/: docker-up.ps1  docker-up.sh  init-db.sql
src/: index.ts
src/config/: index.ts
src/controllers/: propertyController.ts
src/middleware/: errorHandler.ts  rateLimit.ts  validation.ts
src/queues/: scrapingQueue.ts
src/routes/: healthRoutes.ts  propertyRoutes.ts
src/services/: cacheService.ts  dataProcessor.ts  databaseService.ts  domainUrlBuilder.ts  firecrawlService.ts  propertyService.ts
src/types/: index.ts
src/utils/: logger.ts
tests/: setup.ts  test_data_service.py  test_intent_processor.py
tests/integration/: api.test.ts
tests/unit/: domainUrlBuilder.test.ts
(+375 files in other folders)
